# zk-dnssec

./: .env.example  Cargo.toml  README.md
contracts/: .gitignore
contracts/src/: ZKDNSSEC.sol
contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
contracts/test/: ZKDNSSEC.t.sol
contracts/test/fork/: ZKDNSSEC.fork.sol
contracts/test/mock/: ZKDNSSEC.t.sol
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/rr/: dns_class.rs  mod.rs  record_data.rs  record_type.rs  resource.rs
lib/src/rr/dnssec/: algorithm.rs  message.rs  mod.rs
lib/src/rr/dnssec/rdata/: sig.rs
lib/src/rr/domain/: label.rs  name.rs
lib/src/rr/rdata/: txt.rs
lib/src/serialize/: binary.rs
program/: Cargo.toml
program/src/: main.rs
scripts/: Cargo.toml
scripts/src/: entrypoint.rs  helpers.rs
